public/styles.css
.header{
  font-weight: bold;
  text-align: center;
  padding-top: 8px
}

.reservation-widget{
 /* border: solid 2px;
  border-color: #DA3743; */
  width: 400px;
  margin-top: 10px;
  box-shadow: 0px 0px 15px lightgrey;
  font-family: sans-serif;
}

.party-size, .datepicker, .timeselector{
  font-size: 14px;
  border: none;
  border-bottom: 2px solid;
  border-radius: 0;
  -webkit-appearance: none;
}

.party-size:hover, .datepicker:hover, .timeselector:hover{
  cursor: pointer;
  border-color: #DA3743;
}

.party-size{
  width: 100%;
}

.datepicker, .timeselector{
  width: 170px;
  height: 30px;
}

.timeselector, .form-timeselector{
  margin-left: 23px;
}

.form-party-size, .form-datepicker, .form-timeselector{
  margin-top:5px;
  font-weight: bold;
  font-size: 14px;
}

label.form-datepicker, label.form-timeselector{
  margin-top: 12px;
  height: 3px;
}
select#timeselector, input#datepicker, select#party-size{
  padding-left: 0;
}

.picker{
  display: flex;
  justify-content: space-between;
}

.findtable{
  background-color: #DA3743;
  text-align: center;
  width: 100%;
  margin: 5px 0px;
  color: white;
  height: 40px;
}

.findtable:hover{
  background-color: #c4313c;
  cursor: pointer;
}

